# agency

./: .env.example  .gitignore  BACKLOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  OAUTH_DESIGN.md  PLANNING_2026_01_02.md  PLAN_NEXT_SESSION.md  PROGRESS.md  README.md  TECHNICAL_SPEC.md  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt
.github/workflows/: docker-publish.yml
agency_quickdeploy/: __init__.py  __main__.py  auth.py  cli.py  config.py  launcher.py
agency_quickdeploy/gcp/: __init__.py  secrets.py  storage.py  vm.py
agency_quickdeploy/providers/: __init__.py  aws.py  base.py  docker.py  gcp.py  railway.py
agency_quickdeploy/tests/: __init__.py  conftest.py  test_auth.py  test_aws_provider.py  test_cli.py  test_config.py  test_docker_provider.py  test_gcp_provider.py  test_launcher.py  test_provider_base.py  test_railway_provider.py  test_storage.py  test_vm.py
agent-runner/: Dockerfile  README.md  main.py
agentctl/: __init__.py  __main__.py
agentctl/agent/: __init__.py
agentctl/cli/: __init__.py  agents.py  init_cmd.py  logs.py  main.py  run.py  screenshots.py  ssh.py  tell.py
agentctl/engines/: __init__.py
agentctl/providers/: __init__.py  base.py  gcp.py  local.py
agentctl/server/: __init__.py  app.py  database.py  repository.py
docs/: SUBAGENTA_PLAN.md
docs/api/: API.md
railway-agent/: Dockerfile  README.md  main.py  nixpacks.toml  requirements.txt
scripts/: README.md  ci_test.py  dev_server.py  setup-gcp.sh  test_gcp_deploy.py  test_startup_local.sh
shared/: __init__.py
tests/: __init__.py
(+41 files in other folders)
