[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentctl"
version = "0.1.0"
description = "CLI for managing autonomous AI coding agents"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "httpx>=0.24",
    "pyyaml>=6.0",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "google-cloud-compute>=1.14",
    "google-cloud-secret-manager>=2.16",
    "google-cloud-storage>=2.10",
    "google-api-python-client>=2.100",
    "google-auth>=2.20",
]
# Provider-specific dependencies
docker = [
    "docker>=7.0",
]
aws = [
    "boto3>=1.28",
]
gcp = [
    "google-cloud-compute>=1.14",
    "google-cloud-secret-manager>=2.16",
    "google-cloud-storage>=2.10",
]
# All providers
all = [
    "docker>=7.0",
    "boto3>=1.28",
    "google-cloud-compute>=1.14",
    "google-cloud-secret-manager>=2.16",
    "google-cloud-storage>=2.10",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
agentctl = "agentctl.cli.main:cli"
agency-quickdeploy = "agency_quickdeploy.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
